--- a/CinemaBook/Scence/StoreShoppingCart/PaymentFoodCombo/view/PaymentFoodComboViewController.xib
+++ b/CinemaBook/Scence/StoreShoppingCart/PaymentFoodCombo/view/PaymentFoodComboViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,6 +17,7 @@
                 <outlet property="icon_check_1" destination="ska-IU-7k4" id="Jgj-Po-lQL"/>
                 <outlet property="icon_check_2" destination="dlc-wL-e4x" id="YgO-dl-vwT"/>
                 <outlet property="lbl_category_reduce" destination="ulQ-CC-6X4" id="rOv-Tc-Igb"/>
+                <outlet property="lbl_dateget" destination="M7j-2K-Ekp" id="Vh6-qi-ssb"/>
                 <outlet property="lbl_name_cinema" destination="ch0-do-rUE" id="wO0-JV-AuI"/>
                 <outlet property="lbl_total_final" destination="ysF-I4-HGS" id="DuX-Le-KZD"/>
                 <outlet property="lbl_total_vat" destination="8Se-uc-Eyi" id="uqq-DH-jGb"/>
@@ -438,26 +439,39 @@
                             <rect key="frame" x="0.0" y="41" width="393" height="40"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P2d-ji-Fqy">
-                                    <rect key="frame" x="20" y="9" width="22" height="22"/>
+                                    <rect key="frame" x="20" y="7.6666666666666643" width="22" height="23.333333333333336"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="22" id="eBq-o9-K2x"/>
                                         <constraint firstAttribute="width" constant="22" id="fh7-Xr-B7X"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tên rạp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ch0-do-rUE">
-                                    <rect key="frame" x="62" y="9.9999999999999982" width="54" height="20.333333333333329"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Y38-i1-Tnm">
+                                    <rect key="frame" x="62" y="3" width="331" height="34"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tên rạp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ch0-do-rUE">
+                                            <rect key="frame" x="0.0" y="0.0" width="331" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ngày nhận" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7j-2K-Ekp">
+                                            <rect key="frame" x="0.0" y="17" width="331" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstItem="ch0-do-rUE" firstAttribute="leading" secondItem="P2d-ji-Fqy" secondAttribute="trailing" constant="20" id="0rC-ai-zMd"/>
-                                <constraint firstItem="ch0-do-rUE" firstAttribute="centerY" secondItem="mrZ-ts-YCs" secondAttribute="centerY" id="d81-ug-SB4"/>
+                                <constraint firstAttribute="trailing" secondItem="Y38-i1-Tnm" secondAttribute="trailing" id="PvG-Xd-7I2"/>
+                                <constraint firstItem="Y38-i1-Tnm" firstAttribute="leading" secondItem="P2d-ji-Fqy" secondAttribute="trailing" constant="20" id="T0M-eV-Y4G"/>
                                 <constraint firstAttribute="height" constant="40" id="eNo-nr-6SZ"/>
+                                <constraint firstItem="Y38-i1-Tnm" firstAttribute="top" secondItem="mrZ-ts-YCs" secondAttribute="top" constant="3" id="jYx-M0-Arw"/>
                                 <constraint firstItem="P2d-ji-Fqy" firstAttribute="leading" secondItem="mrZ-ts-YCs" secondAttribute="leading" constant="20" id="pga-ai-EG8"/>
                                 <constraint firstItem="P2d-ji-Fqy" firstAttribute="centerY" secondItem="mrZ-ts-YCs" secondAttribute="centerY" id="rih-bf-Xyo"/>
+                                <constraint firstAttribute="bottom" secondItem="Y38-i1-Tnm" secondAttribute="bottom" constant="3" id="wmy-Jj-opC"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -492,19 +506,19 @@
         <image name="icon-back-blue" width="8.6666669845581055" height="17.333333969116211"/>
         <image name="icon-check-disable" width="20" height="20"/>
         <image name="img-no-data" width="220" height="170"/>
-        <image name="mappin.and.ellipse" catalog="system" width="117" height="128"/>
+        <image name="mappin.and.ellipse" catalog="system" width="110" height="128"/>
         <image name="vnpay" width="225" height="225"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
